--- a/src/components/EmojiGame/index.css
+++ b/src/components/EmojiGame/index.css
@@ -1,1 +1,22 @@
-/* Write your code here. */
+.emoji-game-bg-container {
+  background-image: linear-gradient(to right, #9796f0, #fbc7d4);
+  background-size: cover;
+  height: 100vh;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+.gaming-area {
+  height: 80%;
+  width: 100%;
+  padding: 4rem;
+  margin: 0;
+  background: inherit;
+}
+
+.emoji-card-collection-container {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+}
