Removed duplicate class to style the score text (current and top score) in NavBar component, to have a single class to style both score texts

--- a/src/components/NavBar/index.css
+++ b/src/components/NavBar/index.css
@@ -19,8 +19,7 @@
   align-items: center;
 }
 
-.current-score,
-.top-score {
+.score-text {
   font-size: 2rem;
   color: #ffffff;
   margin-right: 1.5rem;
