--- a/src/components/EmojiCard/index.css
+++ b/src/components/EmojiCard/index.css
@@ -1,1 +1,14 @@
-/* Write your code here. */
+.emoji-card-container {
+  background: inherit;
+  border: 0.1rem solid #ffffff30;
+  border-radius: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1.5rem;
+}
+
+.emoji-card-img {
+  height: 3rem;
+  width: 3rem;
+}
