--- a/src/components/EmojiGame/index.css
+++ b/src/components/EmojiGame/index.css
@@ -1,22 +1,25 @@
 .emoji-game-bg-container {
   background-image: linear-gradient(to right, #9796f0, #fbc7d4);
   background-size: cover;
-  height: 100vh;
+  min-height: 100vh;
+  height: 100%;
   padding: 0;
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .gaming-area {
   height: 80%;
-  width: 100%;
+  width: 70%;
   padding: 4rem;
   margin: 0;
-  background: inherit;
+  background: transparent;
 }
 
 .emoji-card-collection-container {
   display: flex;
+  justify-content: center;
   align-items: center;
   flex-wrap: wrap;
   list-style-type: none;
