--- a/src/components/NavBar/index.css
+++ b/src/components/NavBar/index.css
@@ -1,16 +1,28 @@
 .navbar-container {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   width: 100%;
   padding: 1.5rem 3rem;
-  height: 20%;
-  background: transparent;
+  height: 15vh;
+  background-color: #ffffff33;
+}
+
+.brand-container {
+  display: flex;
+  align-items: center;
 }
 
 .emoji-game-brand-img {
   height: 4rem;
-  width: 10rem;
+  width: 4rem;
+}
+
+.navbar-text {
+  font-size: 2rem;
+  color: #ffffff;
+  margin-right: 1.5rem;
+  font-weight: 550;
 }
 
 .score-container {
@@ -20,7 +32,5 @@
 }
 
 .score-text {
-  font-size: 2rem;
-  color: #ffffff;
-  margin-right: 1.5rem;
+  font-weight: 400;
 }
