--- a/src/components/WinOrLoseCard/index.css
+++ b/src/components/WinOrLoseCard/index.css
@@ -8,6 +8,8 @@
   background-color: #ffffff33;
   border: 0.1rem solid #ffffff33;
   border-radius: 0.8rem;
+  font-family: 'Roboto';
+  text-align: center;
 }
 
 .game-outcome-card-img {
@@ -27,16 +29,22 @@
 .game-outcome-text {
   color: #ffffff;
   font-size: 2rem;
+  font-weight: 550;
+  margin-bottom: 2.5rem;
 }
 
 .game-best-score-text {
   color: #ffffff;
   font-size: 1rem;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .game-score {
   color: #6a59ff;
   font-size: 2rem;
+  margin-top: 0;
+  margin-bottom: 1.5rem;
 }
 
 .play-again-button {
@@ -45,18 +53,27 @@
   border: none;
   outline: none;
   cursor: pointer;
-  border-radius: 1rem;
+  border-radius: 3rem;
   padding: 1rem 1.5rem;
+  font-size: 1rem;
+}
+
+.game-best-score-text,
+.game-score,
+.play-again-button {
+  font-weight: 550;
 }
 
 @media (min-width: 768px) {
   .game-outcome-card {
     width: 100%;
     flex-direction: row;
+    padding: 2rem;
   }
 
   .game-outcome-card-img {
     width: 50%;
+    order: 1;
   }
 
   .game-outcome-card-content {
@@ -69,19 +86,21 @@
   }
 
   .game-outcome-text {
-    font-size: 2rem;
+    font-size: 5rem;
   }
 
   .game-best-score-text {
-    font-size: 1rem;
+    font-size: 2.5rem;
+    margin-bottom: 0;
   }
 
   .game-score {
-    font-size: 2rem;
+    font-size: 3.5rem;
   }
 
   .play-again-button {
     border-radius: 1rem;
     padding: 1rem 1.5rem;
+    font-size: 1.2rem;
   }
 }
