--- a/src/components/WinOrLoseCard/index.css
+++ b/src/components/WinOrLoseCard/index.css
@@ -1,5 +1,5 @@
 .game-outcome-card {
-  padding: 1rem;
+  padding: 2rem 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -7,14 +7,14 @@
   height: 100%;
   background-color: #ffffff33;
   border: 0.1rem solid #ffffff33;
-  border-radius: 0.8rem;
+  border-radius: 1.2rem;
   font-family: 'Roboto';
   text-align: center;
 }
 
 .game-outcome-card-img {
   height: 50%;
-  width: 100%;
+  width: 50%;
 }
 
 .game-outcome-card-content {
@@ -30,12 +30,12 @@
   color: #ffffff;
   font-size: 2rem;
   font-weight: 550;
-  margin-bottom: 2.5rem;
+  margin-bottom: 1.5rem;
 }
 
 .game-best-score-text {
   color: #ffffff;
-  font-size: 1rem;
+  font-size: 1.3rem;
   margin-top: 0;
   margin-bottom: 0;
 }
@@ -44,7 +44,7 @@
   color: #6a59ff;
   font-size: 2rem;
   margin-top: 0;
-  margin-bottom: 1.5rem;
+  margin-bottom: 1.2rem;
 }
 
 .play-again-button {
@@ -55,7 +55,8 @@
   cursor: pointer;
   border-radius: 3rem;
   padding: 1rem 1.5rem;
-  font-size: 1rem;
+  font-size: 1.1rem;
+  letter-spacing: 0;
 }
 
 .game-best-score-text,
