Replace brand name paragraph JSX element with header (h1) JSX element in NavBar component. Added button JSX element inside the emoji list item JSX element, that wraps the img JSX element, along with corresponding CSS styling.

--- a/src/components/EmojiCard/index.css
+++ b/src/components/EmojiCard/index.css
@@ -13,6 +13,13 @@
   cursor: pointer;
 }
 
+.emoji-card-button {
+  border: none;
+  outline: none;
+  cursor: pointer;
+  background: transparent;
+}
+
 .emoji-card-img {
   height: 4rem;
   width: 4rem;
